--- a/index.html
+++ b/index.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
-  <title>yolorific</title>
-</head>
-<body>
-  <h1 class="title">YOLO</h1>
-</body>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <link rel="shortcut icon" type="image/png" href="ice-images/favicon.png"/>
+    <title>Luke Ice</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <h1>Ice Page Luke/Lilian/Robert</h1>
+        <a href="#">Lilian's Page</a>
+        <a href="#">Robert's Page</a>
+      </nav>
+    </header>
+    <p> Hi My name is Luke</p>
+    <p>I love Taco Bell </p>
+    <img src="https://www.tacobell.com/~/media/images/taco-bell/products/default/22850_specialties_chalupasupreme_300x300.jpg?w=300&h=300" alt = "taco bell">
+    <img src=ice-images/sketch.jpg alt="sketch" style="width:300px;height:400px;">
+    <img src=ice-images/coffee.jpg alt="coffee" style="width:300px;height:400px;">
+    <video width="320" height="240" autoplay>
+      <source src="ice-images/yolo.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    <form>
+		  Name:
+		  <input type="text" name="name" id = "name"></label><br>
+		  <label for="dob">DOB:</label>
+		  <input type="date" name="DOB" id = "dob"><br>
+
+		  Please enter your choice of snack:<br>
+		  <input type="radio" name="snack" value="pizza"> Pizza<br>
+  		<input type="radio" name="snack" value="donut"> Donut<br>
+  		<input type="radio" name="snack" value="vegan"> Vegan Stuff<br>
+
+  		Please enter your choice of drink:<br>
+		  <input type="radio" name="snack" value="coffee"> Coffee<br>
+  		<input type="radio" name="snack" value="tea"> Tea<br>
+  		<input type="radio" name="snack" value="water"> Water<br>
+	</form>
+  </body>
 </html>
