--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <p> Hi My name is Luke</p>
     <p>I love Taco Bell </p>
     <img src="https://www.tacobell.com/~/media/images/taco-bell/products/default/22850_specialties_chalupasupreme_300x300.jpg?w=300&h=300" alt = "taco bell">
-    <img src=ice-images/sketch.jpg alt="sketch" style="width:300px;height:400px;">
-    <img src=ice-images/coffee.jpg alt="coffee" style="width:300px;height:400px;">
+    <img src="ice-images/sketch.jpg" alt="sketch" style="width:300px;height:400px;">
+    <img src="ice-images/coffee.jpg" alt="coffee" style="width:300px;height:400px;">
     <video width="320" height="240" autoplay>
       <source src="ice-images/yolo.mp4" type="video/mp4">
       Your browser does not support the video tag.
