--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="image/png" href="ice-images/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="ice-images/blockm.jpg"/>
     <title>Luke Ice</title>
   </head>
   <body>
