--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <img src="ice-images/sketch.jpg" alt="sketch" style="width:300px;height:400px;">
     <img src="ice-images/coffee.jpg" alt="coffee" style="width:300px;height:400px;">
     <video width="320" height="240" autoplay>
-      <source src="ice-images/yolo.mp4" type="video/mp4">
+      <source src="ice-images/redgrapes.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <form>
