--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
     <img src="https://www.tacobell.com/~/media/images/taco-bell/products/default/22850_specialties_chalupasupreme_300x300.jpg?w=300&h=300" alt = "taco bell">
     <img src="ice-images/sketch.jpg" alt="sketch" style="width:300px;height:400px;">
     <img src="ice-images/coffee.jpg" alt="coffee" style="width:300px;height:400px;">
-    <video width="320" height="240" autoplay>
-      <source src="ice-images/redgrapes.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+    <p>The photo's show our group's sketch, Taco Bell and Starbucks Coffee</p><br>
     <h4>Fill out the following form:</h4>
 	<form>
 		Name:
@@ -33,11 +30,11 @@
 
 		<div id="snack">
 			Please enter your choice of snack:<br>
-			<input id="snack1" type="radio" name="snack" value="cookies"> 
+			<input id="snack1" type="radio" name="snack" value="cookies">
 			<label for="snack1">Cookies</label><br>
-	  		<input id="snack2" type="radio" name="snack" value="chips"> 
+	  		<input id="snack2" type="radio" name="snack" value="chips">
 	  		<label for="snack2">Chips</label><br>
-	  		<input id="snack3" type="radio" name="snack" value="candy"> 
+	  		<input id="snack3" type="radio" name="snack" value="candy">
 	  		<label for="snack3">Candy</label><br>
   		</div>
   		<br>
@@ -52,5 +49,9 @@
 	  		<label for="drink3">Water</label><br>
 	  	</div>
 	</form>
+  <video width="320" height="240" autoplay>
+    <source src="ice-images/redgrapes.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
   </body>
 </html>
