--- a/ICE/ICE-Responsive/images.html
+++ b/ICE/ICE-Responsive/images.html
@@ -16,7 +16,7 @@
 	<header>
 		<nav id = "top-nav" class="top-nav">
 			<div class="logo">
-			<!--********** Colleen - This is a ridiculous logo, change it.-->         	<a href="index.html"><img src="https://s-i.huffpost.com/gadgets/slideshows/359097/slide_359097_3998986_free.jpg" alt="maddiefactured home"></a>
+			<!--********** Colleen - This is a ridiculous logo, change it.-->         	<a href="index.html"><img src="img/umicm.jpg" alt="maddiefactured home"></a>
        		</div>
 	       <ul>
 	            <li><a href="index.html">HOME</a></li>
@@ -34,13 +34,13 @@
 				<div class="photo-cell black">
 					<img class="resp-img" src="img/img1.jpg" alt="Black Horizontal Rectangle">
 				</div>
-				<div class="photo-cell pink">
+				<div class="photo-cell maroon">
 					<img class="resp-img" src="img/img2.jpg" alt="Maroon Horizontal Rectangle">
 				</div>
 				<div class="photo-cell yellow">
 					<img class="resp-img" src="img/img3.jpg" alt="Yellow Vertical  Rectangle">
 				</div>
-				<div class="photo-cell purple">
+				<div class="photo-cell blu-purple">
 					<img class="resp-img" src="img/img4.jpg" alt="Bluish-purple Vertical  Rectangle">
 				</div>
 				<div class="photo-cell green">
