--- a/ICE/ICE-Responsive/index.html
+++ b/ICE/ICE-Responsive/index.html
@@ -1,5 +1,5 @@
 
-<!DOCTYPE html>	
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<title>Responsive Styled Site Home</title>
@@ -16,7 +16,7 @@
 	<header>
 		<nav id = "top-nav" class="top-nav">
 			<div class="logo">
-			<!--********** Colleen - This is a ridiculous logo, change it.-->         	<a href="index.html"><img src="https://s-i.huffpost.com/gadgets/slideshows/359097/slide_359097_3998986_free.jpg" alt="maddiefactured home"></a>
+			<!--********** Colleen - This is a ridiculous logo, change it.-->         	<a href="index.html"><img src="img/umicm.jpg" alt="maddiefactured home"></a>
        		</div>
 	       <ul>
 	            <li><a class="current-page" href="index.html">HOME</a></li>
