--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,7 +9,7 @@
 	<meta http-equiv="refresh" content="5" >
 	<link rel="stylesheet" href="css/yolo.css">
 	<link rel="stylesheet" href="css/main.css">
-	<link href='http://fonts.googleapis.com/css?family=Cookie' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 
 </head>
 
