--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="css/yolo.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 </head>
 
 <body>
