--- a/portfolio/work.html
+++ b/portfolio/work.html
@@ -9,8 +9,8 @@
  <meta http-equiv="refresh" content="5" >
  <link rel="stylesheet" href="css/yolo.css">
  <link rel="stylesheet" href="css/main.css">
- <link href='http://fonts.googleapis.com/css?family=Cookie' rel='stylesheet' type='text/css'>
-
+ <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 </head>
 
 <body>
