--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -7,8 +7,8 @@
 
  <title>Luke Portfolio</title>
  <meta http-equiv="refresh" content="5" >
- <link rel="stylesheet" href="css/yolo.css">
  <link rel="stylesheet" href="css/main.css">
+ <link rel="stylesheet" href="css/yolo.css">
  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 
@@ -45,7 +45,7 @@
 
 </div>
 <footer class="footer">
-   <a href="https://www.linkedin.com/in/luke-cheng-18a183145/"><img src="css/linkedin.png" class="icon" alt="LinkedIn"></a>
+   <a href="https://www.linkedin.com/in/luke-cheng-18a183145/"><img src="ppictures/linkedin.png" class="icon" alt="LinkedIn"></a>
    <p><i>Luke Cheng &copy; 2018</i></p>
  </footer>
 </body>
