--- a/portfolio/work.html
+++ b/portfolio/work.html
@@ -33,19 +33,66 @@
 </header>
 
 
-<div class="main">
+<div class="projects">
+  <h1>Luke Cheng</h1>
+  <h2>stuff i've done</h2>
+  <p>
+    projects galore
 
-
- <h1>Luke Cheng</h1>
- <h2>stuff i've done</h2>
- <p>
-   projects galore
-
- </p>
-
+  </p>
+  <div class="itt">
+    <h3>Image2Text</h3>
+    <img src= "ppictures/itt.png" alt = "image2text" />
+    <p>
+      Worked with another developer intern and design intern to create webapp that converted handwritten
+      words to online text (our team did not code the scanner)
+    </p>
+  </div>
+  <div class="tx">
+    <h3>Translation Exchange</h3>
+    <img src= "ppictures/tx.png" alt = "Translation Exchange" />
+    <p>
+      Worked with team of 12 other interns to develop a full website supporting mobile Bible translation
+      application. Website allowed users to create profiles to
+      import, export, edit, listen, comment and sort.
+    </p>
+  </div>
+  <div class="opena">
+    <h3>Open Air Challenge</h3>
+    <img src= "ppictures/openair.png" alt = "Open Air Challenge" />
+    <p>
+      Worked with team of 3 other SI students to develop an accessible website using wordpress for a
+      non-profit organization.
+    </p>
+  </div>
+  <div class="eecsthree">
+    <h3>Pipelined LC-2K</h3>
+    <img src= "ppictures/370.png" alt = "EECS 370 Project" />
+    <p>
+      Created a cycle-accurate behavioral simulator
+    for a pipelined implementation of the LC-2K (8 register, 32-bit computer), complete with data forwarding and
+    simple branch prediction (Part of EECS 370). <br />(Didn't have a picture so I included a photo of my favorite fast food chain)
+    </p>
+  </div>
+  <div class="eecstwoeight">
+    <h3>Election project?</h3>
+    <img src= "ppictures/bnb.png" alt = "Branch and Bound" />
+    <p>
+      Implemented fast and effective branch and bound algorithms to achieve nearly optimal solutions.
+      (Part of EECS 281)
+    </p>
+  </div>
+  <div class="eecsfour">
+    <h3>Instagram (Fake)</h3>
+    <img src= "ppictures/foureight.png" alt = "Static Instagram" />
+    <p>
+      Created "Instagram" using static html pages and templates (Part of EECS 485).
+    </p>
+  </div>
+  </div>
 </div>
 <footer class="footer">
-   <a href="https://www.linkedin.com/in/luke-cheng-18a183145/"><img src="css/linkedin.png" class="icon" alt="LinkedIn"></a>
+   <a href="https://www.linkedin.com/in/luke-cheng-18a183145/"><img src="ppictures/linkedin.png" class="icon" alt="LinkedIn"></a>
    <p><i>Luke Cheng &copy; 2018</i></p>
  </footer>
 </body>
