--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -45,7 +45,7 @@
 
 </div>
 <footer class="footer">
-   <a href="https://www.linkedin.com/in/luke-cheng-18a183145/"><img src="css/linkedin.png" class="icon" alt="LinkedIn"></a>
+   <a href="https://www.linkedin.com/in/luke-cheng-18a183145/"><img src="ppictures/linkedin.png" class="icon" alt="LinkedIn"></a>
    <p><i>Luke Cheng &copy; 2018</i></p>
  </footer>
 </body>
