--- a/portfolio/work.html
+++ b/portfolio/work.html
@@ -89,6 +89,21 @@
       Created "Instagram" using static html pages and templates (Part of EECS 485).
     </p>
   </div>
+  <div class="ikea">
+    <h3>IKEA Place Usability Test</h3>
+    <img src= "ppictures/ikea.png" alt = "ikea place" />
+    <p>
+      Part of team that conducted in-depth surveying, testing and analysis of IKEA's augmented reality application (Part of SI 422).
+    </p>
+  </div>
+  <div class="twooh">
+    <h3>206 API Project</h3>
+    <img src= "ppictures/206.png" alt = "206" />
+    <p>
+      Learned to use API's from Facebook and Youtube to manipulate data (Part of SI 206)
+      (Couldn't find a suitable photo so used the album cover of my current favorite song)
+    </p>
+  </div>
   </div>
 </div>
 <footer class="footer">
