--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -40,7 +40,11 @@
  <h1>Luke Cheng</h1>
  <h2>all about me</h2>
  <p>
-   this is who i yam
+   Hi, my name is Luke and I am a developer! I am passionate about coding and people! I hope to one day add a lot more content to this website
+   and also do a lot more cool projects. While most of my skills are coding focused, I am interested in UX and want to learn.
+   <br />
+   I also love to play tennis, eat, play video games, play piano/guitar and a bunch of other stuff. Taco Bell is by far my favorite fast food
+   and I also love IHOP. ~more filler text to be someday changed to something sorta professional hopefully~
  </p>
 
 </div>
