--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -38,10 +38,11 @@
 
 
  <h1>Luke Cheng</h1>
- <h2>Resue</h2>
+ <h2>Resume</h2>
  <p>
    moi resume
  </p>
+ <iframe src="https://s3.amazonaws.com/si330w18-lukcheng/Luke-Cheng-Resume-Winter-2017(si).pdf" style="width:718px; height:700px;" frameborder="0"></iframe>
 
 </div>
 <footer class="footer">
