--- a/portfolio/work.html
+++ b/portfolio/work.html
@@ -34,12 +34,14 @@
 
 
 <div class="main">
+
   <h1>Luke Cheng</h1>
   <h2>stuff i've done</h2>
   <p>
     projects galore
 
   </p>
+  <div class = "proj">
   <div class="itt">
     <h3>Image2Text</h3>
     <img src= "ppictures/itt.png" alt = "image2text" />
