--- a/portfolio/work.html
+++ b/portfolio/work.html
@@ -9,6 +9,7 @@
  <meta http-equiv="refresh" content="5" >
  <link rel="stylesheet" href="css/yolo.css">
  <link rel="stylesheet" href="css/main.css">
+ <link rel="stylesheet" href="css/responsive.css"
  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 </head>
@@ -76,21 +77,6 @@
     simple branch prediction (Part of EECS 370). <br />(Didn't have a picture so I included a photo of my favorite fast food chain)
     </p>
   </div>
-  <div class="eecstwoeight">
-    <h3>Election project?</h3>
-    <img src= "ppictures/bnb.png" alt = "Branch and Bound" />
-    <p>
-      Implemented fast and effective branch and bound algorithms to achieve nearly optimal solutions.
-      (Part of EECS 281)
-    </p>
-  </div>
-  <div class="eecsfour">
-    <h3>Instagram (Fake)</h3>
-    <img src= "ppictures/foureight.png" alt = "Static Instagram" />
-    <p>
-      Created "Instagram" using static html pages and templates (Part of EECS 485).
-    </p>
-  </div>
   <div class="ikea">
     <h3>IKEA Place Usability Test</h3>
     <img src= "ppictures/ikea.png" alt = "ikea place" />
@@ -104,6 +90,21 @@
     <p>
       Learned to use API's from Facebook and Youtube to manipulate data (Part of SI 206)
       (Couldn't find a suitable photo so used the album cover of my current favorite song)
+    </p>
+  </div>
+  <div class="eecstwoeight">
+    <h3>Election project?</h3>
+    <img src= "ppictures/bnb.png" alt = "Branch and Bound" />
+    <p>
+      Implemented fast and effective branch and bound <br />algorithms to achieve nearly optimal solutions.
+      (Part of EECS 281)
+    </p>
+  </div>
+  <div class="eecsfour">
+    <h3>Instagram (Fake)</h3>
+    <img src= "ppictures/foureight.png" alt = "Static Instagram" />
+    <p>
+      Created "Instagram" using static html pages and templates (Part of EECS 485).
     </p>
   </div>
   </div>
