--- a/portfolio/work.html
+++ b/portfolio/work.html
@@ -9,7 +9,7 @@
  <meta http-equiv="refresh" content="5" >
  <link rel="stylesheet" href="css/yolo.css">
  <link rel="stylesheet" href="css/main.css">
- <link rel="stylesheet" href="css/responsive.css"
+ <link rel="stylesheet" href="css/responsive.css" >
  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 </head>
@@ -90,14 +90,6 @@
     <p>
       Learned to use API's from Facebook and Youtube to manipulate data (Part of SI 206)
       (Couldn't find a suitable photo so used the album cover of my current favorite song)
-    </p>
-  </div>
-  <div class="eecstwoeight">
-    <h3>Election project?</h3>
-    <img src= "ppictures/bnb.png" alt = "Branch and Bound" />
-    <p>
-      Implemented fast and effective branch and bound <br />algorithms to achieve nearly optimal solutions.
-      (Part of EECS 281)
     </p>
   </div>
   <div class="eecsfour">
