--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -29,6 +29,18 @@
      <a href="about.html">About</a>
      <a href="resume.html">Resume</a>
    </nav>
+   <script type="text/javascript">
+   var url = "https://lcheng49.github.io/portfolio/about.html".split("/"); 
+   var navLinks = document.getElementsByTagName("nav")[0].getElementsByTagName("a");
+   var i=0;
+   var currentPage = url[url.length - 1];
+   for(i;i<navLinks.length;i++){
+     var lb = navLinks[i].href.split("/");
+     if(lb[lb.length-1] == currentPage) {
+      navLinks[i].className = "current";
+     }
+     }
+   </script>
  </div>
 
 </header>
@@ -40,11 +52,15 @@
  <h1>Luke Cheng</h1>
  <h2>all about me</h2>
  <p>
-   Hi, my name is Luke and I am a developer! I am passionate about coding and people! I hope to one day add a lot more content to this website
-   and also do a lot more cool projects. While most of my skills are coding focused, I am interested in UX and want to learn.
+   Hi, my name is Luke and I am a developer! I am passionate about coding and people!
+   <br />I hope to one day add a lot more content to this website
+   and also do a lot more cool projects.
+   <br  />While most of my skills are coding focused, I am interested in UX and want to learn.
    <br />
-   I also love to play tennis, eat, play video games, play piano/guitar and a bunch of other stuff. Taco Bell is by far my favorite fast food
-   and I also love IHOP. ~more filler text to be someday changed to something sorta professional hopefully~
+   I also love to play tennis, eat, play video games, play piano/guitar and a bunch of other stuff.
+   <br />Taco Bell is by far my favorite fast food
+   and I also love IHOP.
+   <br />~more filler text to be someday changed to something sorta professional hopefully~
  </p>
 
 </div>
