--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+<div id = "background">
+
 
 <header class="header">
 
@@ -29,7 +31,7 @@
 			<a href="resume.html">Resume</a>
 		</nav>
     <script type="text/javascript">
-    var url = "https://lcheng49.github.io/portfolio/index.html".split("/"); 
+    var url = "https://lcheng49.github.io/portfolio/index.html".split("/");
     var navLinks = document.getElementsByTagName("nav")[0].getElementsByTagName("a");
     var i=0;
     var currentPage = url[url.length - 1];
@@ -68,6 +70,7 @@ chickens.<br>
 
 	</p>
 
+</div>
 </div>
 <footer class="footer">
 		<a href="https://www.linkedin.com/in/luke-cheng-18a183145/"><img src="ppictures/linkedin.png" class="icon" alt="LinkedIn"></a>
