--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 
@@ -29,8 +29,8 @@
      <a href="about.html">About</a>
      <a href="resume.html">Resume</a>
    </nav>
-   <script type="text/javascript">
-   var url = "https://lcheng49.github.io/portfolio/about.html".split("/"); 
+   <script>
+   var url = "https://lcheng49.github.io/portfolio/about.html".split("/");
    var navLinks = document.getElementsByTagName("nav")[0].getElementsByTagName("a");
    var i=0;
    var currentPage = url[url.length - 1];
