--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,5 +1,5 @@
  <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 
@@ -30,7 +30,7 @@
 			<a href="about.html">About</a>
 			<a href="resume.html">Resume</a>
 		</nav>
-    <script type="text/javascript">
+    <script>
     var url = "https://lcheng49.github.io/portfolio/index.html".split("/");
     var navLinks = document.getElementsByTagName("nav")[0].getElementsByTagName("a");
     var i=0;
