--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 
@@ -29,8 +29,8 @@
      <a href="about.html">About</a>
      <a href="resume.html">Resume</a>
    </nav>
-   <script type="text/javascript">
-   var url = "https://lcheng49.github.io/portfolio/resume.html".split("/"); 
+   <script>
+   var url = "https://lcheng49.github.io/portfolio/resume.html".split("/");
    var navLinks = document.getElementsByTagName("nav")[0].getElementsByTagName("a");
    var i=0;
    var currentPage = url[url.length - 1];
@@ -54,7 +54,7 @@
  <p>
    moi resume
  </p>
- <iframe src="https://s3.amazonaws.com/si330w18-lukcheng/Luke-Cheng-Resume-Winter-2017(si).pdf" style="width:718px; height:700px;" frameborder="0" ></iframe>
+ <iframe src="https://s3.amazonaws.com/si330w18-lukcheng/Luke-Cheng-Resume-Winter-2017(si).pdf" style="width:718px; height:700px;" ></iframe>
 
 </div>
 <footer class="footer">
