--- a/portfolio/work.html
+++ b/portfolio/work.html
@@ -47,7 +47,7 @@
 
 <div class="main">
 
-  <h1>Luke Cheng</h1>
+  <h1> </h1>
   <h2>stuff i've done</h2>
   <p>
     projects galore
@@ -90,14 +90,14 @@
   </div>
   <div class="ikea">
     <h3>IKEA Place Usability Test</h3>
-    <img src= "ppictures/ikea.png" alt = "ikea place" />
+    <img src= "ppictures/ikea.png" alt = "THE IKEA PLACE" />
     <p>
       Part of team that conducted in-depth surveying, testing and analysis of IKEA's augmented reality application (Part of SI 422).
     </p>
   </div>
   <div class="twooh">
     <h3>206 API Project</h3>
-    <img src= "ppictures/206.png" alt = "206" />
+    <img src= "ppictures/206.png" alt = "SI206" />
     <p>
       Learned to use API's from Facebook and Youtube to manipulate data (Part of SI 206)
       (Couldn't find a suitable photo so used the album cover of my current favorite song)
