--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,7 +20,7 @@
 
 	<div class="header_1">
 
-		<h1><a href="index.html">Luke<span>Cheng</span></a></h1>
+		<h1>Luke<span>Cheng</span></h1>
 
 
 		<nav>
