--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -19,7 +19,7 @@
 
  <div class="header_1">
 
-   <h1><a href="index.html">Luke<span>Cheng</span></a></h1>
+   <h1>Luke<span>Cheng</span></h1>
 
 
    <nav>
