--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -61,7 +61,9 @@
    and I also love IHOP.
    <br />~more filler text to be someday changed to something sorta professional hopefully~
  </p>
-
+  <div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d224444.0643059941!2d-81.50918023184778!3d28.48139856035391!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e773d8fecdbc77%3A0xac3b2063ca5bf9e!2sOrlando%2C+FL!5e0!3m2!1sen!2sus!4v1523054854037" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+  </div>
 </div>
 <footer class="footer">
    <a href="https://www.linkedin.com/in/luke-cheng-18a183145/"><img src="ppictures/linkedin.png" class="icon" alt="LinkedIn"></a>
