--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -6,6 +6,8 @@
  <meta charset="utf-8">
 
  <title>Luke Portfolio</title>
+ <link rel="shortcut icon" href="ppictures/favicon.ico" type="image/x-icon">
+ <link rel="icon" href="ppictures/favicon.ico" type="image/x-icon">
  <link rel="stylesheet" href="css/main.css">
  <link rel="stylesheet" href="css/yolo.css">
  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
@@ -59,7 +61,7 @@
    I also love to play tennis, eat, play video games, play piano/guitar and a bunch of other stuff.
    <br />Taco Bell is by far my favorite fast food
    and I also love IHOP.
-   <br />~more filler text to be someday changed to something sorta professional hopefully~
+   <br />My favorite city in the world (as of now) is Orlando and I have attached a map.
  </p>
   <div>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d224444.0643059941!2d-81.50918023184778!3d28.48139856035391!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e773d8fecdbc77%3A0xac3b2063ca5bf9e!2sOrlando%2C+FL!5e0!3m2!1sen!2sus!4v1523054854037" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
