--- a/portfolio/work.html
+++ b/portfolio/work.html
@@ -6,6 +6,8 @@
  <meta charset="utf-8">
 
  <title>Luke Portfolio</title>
+ <link rel="shortcut icon" href="ppictures/favicon.ico" type="image/x-icon">
+ <link rel="icon" href="ppictures/favicon.ico" type="image/x-icon">
  <link rel="stylesheet" href="css/yolo.css">
  <link rel="stylesheet" href="css/main.css">
  <link rel="stylesheet" href="css/responsive.css" >
