--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -74,6 +74,8 @@ chickens.<br>
 </div>
 </div>
 <footer class="footer">
+    <a href="https://www.tacobell.com/"><img src="ppictures/tbell.png" class="icon" alt="TacoBell"></a>
+    <a href="https://github.com/lcheng49"><img src="ppictures/github.png" class="icon" alt="Github"></a>
 		<a href="https://www.linkedin.com/in/luke-cheng-18a183145/"><img src="ppictures/linkedin.png" class="icon" alt="LinkedIn"></a>
 		<p><i>Luke Cheng &copy; 2018</i></p>
 	</footer>
