--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -59,6 +59,8 @@
 
 </div>
 <footer class="footer">
+  <a href="https://www.tacobell.com/"><img src="ppictures/tbell.png" class="icon" alt="TacoBell"></a>
+  <a href="https://github.com/lcheng49"><img src="ppictures/github.png" class="icon" alt="Github"></a>
    <a href="https://www.linkedin.com/in/luke-cheng-18a183145/"><img src="ppictures/linkedin.png" class="icon" alt="LinkedIn"></a>
    <p><i>Luke Cheng &copy; 2018</i></p>
  </footer>
