--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -12,6 +12,7 @@
  <link rel="stylesheet" href="css/yolo.css">
  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+  <script src="js/snowstorm.js"></script>
 
 </head>
 
@@ -30,6 +31,7 @@
      <a href="about.html">About</a>
      <a href="resume.html">Resume</a>
    </nav>
+
    <script>
    var url = "https://lcheng49.github.io/portfolio/about.html".split("/");
    var navLinks = document.getElementsByTagName("nav")[0].getElementsByTagName("a");
@@ -42,13 +44,14 @@
      }
      }
    </script>
+
  </div>
 
 </header>
 
 
 <div class="main">
-
+  <div id= "snow">
 
  <h1>Luke Cheng</h1>
  <h2>all about me</h2>
@@ -66,7 +69,10 @@
   <div>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d224444.0643059941!2d-81.50918023184778!3d28.48139856035391!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e773d8fecdbc77%3A0xac3b2063ca5bf9e!2sOrlando%2C+FL!5e0!3m2!1sen!2sus!4v1523054854037" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
   </div>
+
 </div>
+</div>
+
 <footer class="footer">
   <a href="https://www.tacobell.com/"><img src="ppictures/tbell.png" class="icon" alt="TacoBell"></a>
   <a href="https://github.com/lcheng49"><img src="ppictures/github.png" class="icon" alt="Github"></a>
