--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -42,6 +42,20 @@
      }
      }
    </script>
+   <script type="text/javascript">
+var currentTime = new Date().getHours();
+if (7 <= currentTime && currentTime < 19) {
+    if (document.body) {
+        document.body.background = "ppictures/day.png";
+    }
+}
+else {
+    if (document.body) {
+        document.body.background = "ppictures/night.png";
+    }
+}
+
+</script>
  </div>
 
 </header>
