--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -42,7 +42,7 @@
      }
      }
    </script>
-   <script type="text/javascript">
+   <script>
 var currentTime = new Date().getHours();
 if (7 <= currentTime && currentTime < 19) {
     if (document.body) {
