--- a/portfolio/work.html
+++ b/portfolio/work.html
@@ -49,12 +49,7 @@
 
 <div class="main">
 
-  <h1> </h1>
-  <h2>stuff i've done</h2>
-  <p>
-    projects galore
-
-  </p>
+  <h2>Projects!</h2>
   <div class = "proj">
   <div class="itt">
     <h3>Image2Text</h3>
