--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -57,13 +57,17 @@
   <h2>Student in CS/UX</h2>
   <h2>My Favorite Poem The Red Wheelbarrow</h2>
   <h3>William Carlos Williams</h3>
-	<p>
+	<p >
     so much depends<br>
 upon<br>
 <br>
 a red wheel<br>
 barrow<br>
 <br>
+</p>
+<p class = "poem">
+
+
 glazed with rain<br>
 water<br>
 <br>
