--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -54,7 +54,7 @@
   <div id= "snow">
 
  <h1>Luke Cheng</h1>
- <h2>all about me</h2>
+ <h2>All About Me</h2>
  <p>
    Hi, my name is Luke and I am a developer! I am passionate about coding and people!
    <br />I hope to one day add a lot more content to this website
