--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -61,7 +61,7 @@
    and also do a lot more cool projects.
    <br  />While most of my skills are coding focused, I am interested in UX and want to learn.
    <br />
-   I also love to play tennis, eat, play video games, play piano/guitar and a bunch of other stuff.
+   I love to play tennis, eat, play video games, play piano/guitar and a bunch of other stuff.
    <br />Taco Bell is by far my favorite fast food
    and I also love IHOP.
    <br />My favorite city in the world (as of now) is Orlando and I have attached a map.
