--- a/portfolio/work.html
+++ b/portfolio/work.html
@@ -63,9 +63,9 @@
     <h3>Translation Exchange</h3>
     <img src= "ppictures/tx.png" alt = "Translation Exchange" />
     <p>
-      Worked with team of 12 other interns to develop a full website supporting mobile Bible translation
+      Worked with team of 12 other interns to develop a full website supporting a mobile Bible translation
       application. Website allowed users to create profiles to
-      import, export, edit, listen, comment and sort.
+      import, export, edit, listen, comment and sort various files.
     </p>
   </div>
   <div class="opena">
@@ -82,7 +82,7 @@
     <p>
       Created a cycle-accurate behavioral simulator
     for a pipelined implementation of the LC-2K (8 register, 32-bit computer), complete with data forwarding and
-    simple branch prediction (Part of EECS 370). <br />(Didn't have a picture so I included a photo of my favorite fast food chain)
+    simple branch prediction (EECS 370). <br />(Didn't have a picture so I included a photo of my favorite fast food)
     </p>
   </div>
   <div class="ikea">
