--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -43,8 +43,8 @@
      }
    </script>
    <script>
-var currentTime = new Date().getHours();
-if (7 <= currentTime && currentTime < 19) {
+var time = new Date().getHours();
+if (7 <= time && time < 19) {
     if (document.body) {
         document.body.background = "ppictures/day.png";
     }
